--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,20 +28,7 @@ body{
 
   }
 
-  .tarjeta{
-      display:flex;
-      flex-direction:column;
-      justify-content:space-between;
-      width:160px;
-      height: 250px;
-      border: 1px solid lightgray;
-      box-shadow: 2px 2px 8px 4px #d3d3d3d1;
-      border-radius:15px;
-      font-family: sans-serif;
-      margin-top: 100px;
-      padding: 10px;
 
-  }
   .titulo{
       font-size: 24px;
       padding: 10px 10px 0 10px;;
@@ -70,6 +57,7 @@ body{
 
 .imagencard{
   height: 150px;
+  width: 150px;
   
 }
 
@@ -77,7 +65,7 @@ body{
   color: #706b6b;
 }
 .preciocolor{
-  margin-left: 10px;
+  margin-left: -40px;
   
   color: #706b6b;
 }
@@ -92,3 +80,36 @@ body{
   
 }
 
+/* Float four columns side by side */
+.column {
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+}
+
+/* Remove extra left and right margins, due to padding in columns */
+.row {margin: 0 -5px;}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Style the counter cards */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
+  padding: 50px;
+  text-align: center;
+  background-color: #f1f1f1;
+}
+
+/* Responsive columns - one column layout (vertical) on small screens */
+@media screen and (max-width: 00px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
