--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,115 +1,12 @@
-/* Add a black background color to the top navigation */
-body{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+#divpadre{
+    margin-top: 5%;
 }
-.topnav {
-    overflow: hidden;
+
+.prueba{
+    margin-left: 100px ;
+    height: 50px;
+    width: 50px;
+    border: 1px solid lightgray;
+    
   }
-  
-  /* Style the links inside the navigation bar */
-  .topnav .navbar {
-    float: left;
-    color: #706b6b;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Add a color to the active/current link */
-  .topnav a.active {
-    color: #706b6b;
-
-  }
-
-
-  .titulo{
-      font-size: 24px;
-      padding: 10px 10px 0 10px;;
-  }
-
-  .pie{
-  background: #6699ff;
-      border-radius:0 0 15px 15px;
-      padding: 10px;
-      text-align:center;
-  
-  }
-  .pie a{
-      text-decoration: none;
-      color: white;
-      }
-  .pie a:after {
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      z-index: 1;
-      content: ""
-}
-
-.imagencard{
-  height: 150px;
-  width: 150px;
-  
-}
-
-.nombreproducto{
-  color: #706b6b;
-}
-.preciocolor{
-  margin-left: -40px;
-  
-  color: #706b6b;
-}
-
-.botontienda{
-  margin-left: 40px ;
-  height: 50px;
-  width: 50px;
-  color: #706b6b;
-  border-radius:30px;
-  border: 1px solid lightgray;
-  
-}
-
-/* Float four columns side by side */
-.column {
-  float: left;
-  width: 25%;
-  padding: 0 10px;
-}
-
-/* Remove extra left and right margins, due to padding in columns */
-.row {margin: 0 -5px;}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Style the counter cards */
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
-  padding: 50px;
-  text-align: center;
-  background-color: #f1f1f1;
-}
-
-/* Responsive columns - one column layout (vertical) on small screens */
-@media screen and (max-width: 00px) {
-  .column {
-    width: 100%;
-    display: block;
-    margin-bottom: 20px;
-  }
-}
