se cambio el nombre seach a buscar del navbar

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -43,7 +43,7 @@
           <!-- este input buscador enviaron con el id hacia nuestro js -->
           <input class="form-control me-2" type="search" id="buscador" placeholder="Buscar Producto" aria-label="Search">
           <!-- este botton se activa al momento de hacerle click para encontrar nuestro producto -->
-          <button class="btn btn-outline-success" id="btnbuscar" type="button">Search</button>
+          <button class="btn btn-outline-success" id="btnbuscar" type="button">Buscar</button>
         </div>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
